Adding authorization middleware to Stilla. Fixing the location of the Docker network removal in the teardown script.
